force-app/main/default/objects/Station__c/Station__c.object-meta.xml
<CustomObject>
    <description>Network Rail managed station profile for the Retail Hub demo.</description>
    <label>Station</label>
    <nameField>
        <label>Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>