force-app/main/default/objects/Station__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>