force-app/main/default/objects/Station__c/fields/ManagedSince__c.field-meta.xml
<CustomField>
    <fullName>ManagedSince__c</fullName>
    <label>Managed Since</label>
    <type>Date</type>
</CustomField>