force-app/main/default/objects/Station__c/fields/OverallComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>OverallComplianceScore__c</fullName>
    <label>Overall Compliance Score (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>