force-app/main/default/objects/Station__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>London &amp; South East</fullName><default>false</default><label>London &amp; South East</label></value>
            <value><fullName>North West &amp; Central</fullName><default>false</default><label>North West &amp; Central</label></value>
            <value><fullName>Eastern</fullName><default>false</default><label>Eastern</label></value>
            <value><fullName>Wales &amp; Western</fullName><default>false</default><label>Wales &amp; Western</label></value>
            <value><fullName>Scotland</fullName><default>false</default><label>Scotland</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>