force-app/main/default/objects/Station__c/fields/StationType__c.field-meta.xml
<CustomField>
    <fullName>StationType__c</fullName>
    <label>Station Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Category A</fullName><default>false</default><label>Category A</label></value>
            <value><fullName>Category B</fullName><default>false</default><label>Category B</label></value>
            <value><fullName>Category C</fullName><default>false</default><label>Category C</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>