force-app/main/default/objects/Station__c/listViews/All_Stations.listView-meta.xml
<ListView>
    <fullName>All_Stations</fullName>
    <filterScope>Everything</filterScope>
    <label>All Stations</label>
    <columns>NAME</columns>
    <columns>StationType__c</columns>
    <columns>Region__c</columns>
    <columns>RiskProfile__c</columns>
    <columns>OverallComplianceScore__c</columns>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>